--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=RentalMachineManager
+
+spring.datasource.url=jdbc:mysql://localhost:3306/RentalMachineManager
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#MyBatisの設定
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.mapper-locations=classpath*:/mapper/*.xml
